--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "design-1",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://sampathedke.github.io/team-member-task-1",
+  "homepage": "http://sampathedke.github.io/team-members-task-1",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
